--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p id="birthdayText"></p>
   </div>
 
-  <audio id="birthdayMusic" src="./music_final.MP3" loop></audio>
+  <audio id="birthdayMusic" src="./music1.mp4" loop></audio>
   <script src="./index.js"></script>
 
 </body>
