--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Chúc Mừng Sinh Nhật</title>
+  <title>Lưu bút cho Hà</title>
   <link href="https://fonts.google.com/specimen/Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
