--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="card hidden" id="message">
-      <h1>🎉 Chúc Mừng Sinh Nhật! 🎂</h1>
+      <h1> Lưu bút cho Hà 🎉</h1>
       <p id="birthdayText"></p>
   </div>
 
