--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lưu bút cho Hà</title>
-  <link href="https://fonts.googleapis.com/css?family=Lexend" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lexend&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
 </head>
